--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
+  rxdart: ^0.27.0
   #awesome_dialog: ^3.2.1
 
 dev_dependencies:
